--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "url": "https://github.com/jimf/joy-js/issues"
   },
   "homepage": "https://github.com/jimf/joy-js",
-  "dependencies": {},
+  "dependencies": {
+    "uparse": "^0.4.0"
+  },
   "devDependencies": {
     "nyc": "^11.8.0",
     "standard": "^11.0.1",
